--- a/mousecircle.html
+++ b/mousecircle.html
@@ -252,14 +252,26 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                     const shaderCode = (stage === 0) ? vertexShaderWGSL : fragmentShaderWGSL;
 
                     console.log('[SDL] CreateGPUShader, stage:', stage);
+                    console.log('[SDL] Shader code:', shaderCode);
 
                     try {
                         const shaderModule = device.createShaderModule({ code: shaderCode });
+
+                        // Check for compilation errors asynchronously
+                        shaderModule.getCompilationInfo().then(info => {
+                            if (info.messages.length > 0) {
+                                console.error('[SDL] Shader compilation messages:', info.messages);
+                            } else {
+                                console.log('[SDL] Shader compiled successfully');
+                            }
+                        });
+
                         const handle = nextHandle++;
                         shaders.set(handle, shaderModule);
                         console.log('[SDL] CreateGPUShader, handle:', handle);
                         return handle;
                     } catch (e) {
+                        console.error('[SDL] Failed to create shader:', e);
                         setError('Failed to create shader: ' + e.message);
                         return 0;
                     }
@@ -548,6 +560,7 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
 
                     // Read uniform data from WASM memory (MVP matrix: 16 floats)
                     const uniformData = new Float32Array(memory.buffer, data_ptr, length / 4);
+                    console.log('[SDL] Uploading uniforms, cmdbuf:', cmdbufHandle, 'data:', Array.from(uniformData).slice(0, 4));
 
                     // Create or update uniform buffer
                     if (!cmdbuf.uniformBuffer) {
@@ -555,6 +568,7 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                             size: 64, // mat4x4 = 16 floats = 64 bytes
                             usage: GPUBufferUsage.UNIFORM | GPUBufferUsage.COPY_DST,
                         });
+                        console.log('[SDL] Created uniform buffer');
                     }
 
                     device.queue.writeBuffer(cmdbuf.uniformBuffer, 0, uniformData);
@@ -571,6 +585,9 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                                     resource: { buffer: cmdbuf.uniformBuffer }
                                 }]
                             });
+                            console.log('[SDL] Created bind group');
+                        } else {
+                            console.error('[SDL] No pipeline found for bind group creation');
                         }
                     }
                 },
@@ -663,13 +680,18 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                 },
 
                 begin_gpu_copy_pass(cmdbufHandle) {
+                    console.log('[SDL] BeginGPUCopyPass, cmdbuf:', cmdbufHandle);
                     const cmdbuf = commandBuffers.get(cmdbufHandle);
-                    if (!cmdbuf) return 0;
+                    if (!cmdbuf) {
+                        console.error('[SDL] BeginGPUCopyPass: invalid cmdbuf', cmdbufHandle);
+                        return 0;
+                    }
 
                     // WebGPU doesn't have explicit copy passes like SDL GPU
                     // We'll handle copies directly in upload_to_gpu_buffer
                     const handle = nextHandle++;
                     cmdbuf.copyPassHandle = handle;
+                    console.log('[SDL] BeginGPUCopyPass created, handle:', handle);
                     return handle;
                 },
 
@@ -686,13 +708,21 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                     const destOffset = dv.getUint32(dest_ptr + 4, true);
                     const size = dv.getUint32(dest_ptr + 8, true);
 
+                    console.log('[SDL] UploadToGPUBuffer, transferBuf:', transferBufferHandle, 'destBuf:', destBufferHandle, 'size:', size);
+
                     const transferBuf = transferBuffers.get(transferBufferHandle);
                     const destBuffer = buffers.get(destBufferHandle);
 
                     if (transferBuf && destBuffer && transferBuf.mappedData) {
                         // Write mapped data directly to GPU buffer
                         device.queue.writeBuffer(destBuffer, destOffset, transferBuf.mappedData, sourceOffset, size);
-                        console.log('[SDL] UploadToGPUBuffer, size:', size);
+                        console.log('[SDL] UploadToGPUBuffer SUCCESS');
+                    } else {
+                        console.error('[SDL] UploadToGPUBuffer FAILED:', {
+                            transferBuf: !!transferBuf,
+                            destBuffer: !!destBuffer,
+                            mappedData: transferBuf ? !!transferBuf.mappedData : false
+                        });
                     }
                 },
 
@@ -715,7 +745,9 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                         const buffer = buffers.get(bufferHandle);
                         if (buffer) {
                             pass.setVertexBuffer(first_slot + i, buffer, offset);
-                            console.log('[SDL] BindGPUVertexBuffer, slot:', first_slot + i);
+                            console.log('[SDL] BindGPUVertexBuffer, slot:', first_slot + i, 'handle:', bufferHandle, 'buffer:', buffer);
+                        } else {
+                            console.error('[SDL] BindGPUVertexBuffer: buffer not found, handle:', bufferHandle);
                         }
                     }
                 },
@@ -733,7 +765,9 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                     if (buffer) {
                         const format = index_element_size === 1 ? 'uint32' : 'uint16';
                         pass.setIndexBuffer(buffer, format, offset);
-                        console.log('[SDL] BindGPUIndexBuffer, format:', format);
+                        console.log('[SDL] BindGPUIndexBuffer, format:', format, 'handle:', bufferHandle, 'buffer:', buffer);
+                    } else {
+                        console.error('[SDL] BindGPUIndexBuffer: buffer not found, handle:', bufferHandle);
                     }
                 },
 
@@ -745,7 +779,10 @@ fn main(input: VertexOutput) -> @location(0) vec4f {
                     // Set bind group before drawing
                     const cmdbufEntry = Array.from(commandBuffers.values()).find(cb => cb.bindGroup);
                     if (cmdbufEntry && cmdbufEntry.bindGroup) {
+                        console.log('[SDL] Setting bind group for draw');
                         pass.setBindGroup(0, cmdbufEntry.bindGroup);
+                    } else {
+                        console.error('[SDL] No bind group found for draw!');
                     }
 
                     pass.drawIndexed(indexCount, instanceCount, firstIndex, vertexOffset, firstInstance);
